--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "styled-components": "^4.4.1"
   },
   "scripts": {
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.5.0"
   }
 }
