--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "polished": "^3.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-number-format": "^4.3.1",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
