--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "node-sass": "^4.13.0",
     "polished": "^3.4.2",
     "react": "^16.11.0",
+    "react-date-time": "^2.10.2",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.11.0",
     "react-number-format": "^4.3.1",
     "react-redux": "^7.1.3",
