--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "is-promise": "^2.1.0",
+    "local-storage": "^2.0.0",
     "material-design-icons": "^3.0.1",
     "node-sass": "^4.13.0",
     "polished": "^3.4.2",
